# CodegniPy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
codegnipy/: __init__.py  cache.py  cli.py  decorator.py  determinism.py  distributed.py  memory.py  observability.py  providers.py  reflection.py  runtime.py  scheduler.py  security.py  streaming.py  tools.py  transformer.py  validation.py
cognipy/: __init__.py  cli.py  decorator.py  determinism.py  memory.py  providers.py  reflection.py  runtime.py  scheduler.py  streaming.py  tools.py  transformer.py
examples/: demo.py
tests/: __init__.py  test_cache.py  test_determinism.py  test_distributed.py  test_memory.py  test_observability.py  test_providers.py  test_reflection.py  test_runtime.py  test_scheduler.py  test_security.py  test_streaming.py  test_tools.py  test_transformer.py
